--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -101,14 +101,14 @@
         height: 21px;
         top: -2px;
         left: -37px;
-        background-image: url(../../img/icon-like.svg);
+        background-image: url(../img/icon-like.svg);
         background-repeat: no-repeat;
         @media (min-width: $tablet-width) {
             top: 2px;
             left: -32px;
         }
         @media (min-width: $desktop-width) {
-            background-image: url(../../img/icon-like-desktop.svg);
+            background-image: url(../img/icon-like-desktop.svg);
         }
     }
     @media (min-width: $tablet-width) {
