--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -71,6 +71,9 @@
         margin-bottom: 48px;
         border-bottom: none;
     }
+    @media (min-width: $desktop-width) {
+        margin-bottom: 45px;
+    }
 }
 
 .inner-main .main-header {
@@ -94,6 +97,9 @@
     @media (min-width: $tablet-width) {
         width: auto;
         padding: 0;
+    }
+    @media (min-width: $desktop-width) {
+        line-height: 26px;
     }
 }
 
