--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,9 +1,16 @@
+.page {
+    @media (min-width: $desktop-width) {
+        background-color: #E7E5E5;
+    } 
+}
+
 .page__body {
     width: 320px;
     font-family: "PT Sans", Arial, sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 26px;
+    background-color: $white;
     text-transform: uppercase;
     margin: 0 auto;
     @media (min-width: $tablet-width) {
@@ -11,5 +18,6 @@
     }
     @media (min-width: $desktop-width) {
         min-width: $desktop-width;
+        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
     }
 }
