--- a/source/sass/blocks/page-form.scss
+++ b/source/sass/blocks/page-form.scss
@@ -266,6 +266,7 @@
     height: 55px;
     border-radius: 50%;
     background-color: #F2F2F2;
+    cursor: pointer;
 }
 
 .filter-radio__input+.filter-radio__label:hover::before {
@@ -389,6 +390,7 @@
     height: 56px;
     background-color: #f2f2f2;
     border-radius: 10%;
+    cursor: pointer;
 }
 
 .filter-checkbox__input+.filter-checkbox__label:hover::before {
