--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,10 +6,23 @@
 @import "blocks/page.scss";
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
+@import "blocks/site-list.scss";
 @import "blocks/page-main.scss";
 @import "blocks/advantages.scss";
 @import "blocks/about-us.scss";
 @import "blocks/gallery.scss";
 @import "blocks/video.scss";
 @import "blocks/page-form.scss";
+@import "blocks/fieldset-line.scss";
+@import "blocks/presents-section.scss";
+@import "blocks/contact-section.scss";
+@import "blocks/filter-radio.scss";
+@import "blocks/filter-checkbox.scss";
+@import "blocks/textarea-section.scss";
+@import "blocks/modal.scss";
+@import "blocks/modal-failure.scss";
+@import "blocks/modal-success.scss";
+@import "blocks/warning.scss";
 @import "blocks/page-footer.scss";
+@import "blocks/social-link.scss";
+@import "blocks/page-copyright.scss";
